HamFax 0.5
 * fixed disconnect bug while writing to file
 * fixed line length while transmitting at high speed (>300lpm)
 * failed read on sound device should no longer crash the program
 * error message if PTC (serial) device cannot be accessed
 * minor changes

HamFax 0.4
 * received colors are displayed as spectrum in receive dialog
 * possible data rates for the PTC are now 38400, 57600 and 115200 bps
 * three low pass filters in demodulator, taken from ACfax
 * various small fixes

HamFax 0.3
 * moved controls to three tool bars
 * some tool tips explaining controls
 * color fax like JVFAX does as JVCOLOR
 * several routines to correct received picture
 * sound card and serial interface are now accessed without blocking
 * help dialog

HamFax 0.2
 * some changes to creation and recognition of phasing lines
 * options are now saved in config file ~/.hamfax
 * now all image file formats supported by Qt are available
 * added menu items to rotate the image and to scale to ioc
 * switch for scrolling to last line while receiving
 * added status bar and moved image size and ioc there
 * while receiving facsimiles via sound card the signal level is shown
 * little changes to README
 * added this file :)

HamFax 0.1
 * initial release

HamFax 0.0
 * this was just a test for uploading files to sourceforge